@@ -903,6 +903,15 @@ SPVM_OP* SPVM_OP_build_case_statement(SPVM_COMPILER* compiler, SPVM_OP* op_case_
   op_term->flag = SPVM_OP_C_FLAG_CONSTANT_CASE;
   
   if (op_block) {
+    // case block last statement must be break;
+    SPVM_OP* op_statements = op_block->first;
+    if (op_statements) {
+      SPVM_OP* op_last_statement = op_statements->last;
+      if (!(op_last_statement && op_last_statement->id == SPVM_OP_C_ID_BREAK)) {
+        SPVM_COMPILER_error(compiler, "Last statement of case block must be break statement at %s line %d\n", op_block->file, op_block->line);
+      }
+    }
+    
     SPVM_OP_insert_child(compiler, op_case_info, op_case_info->last, op_block);
   }
   
