@@ -30,45 +30,59 @@ package SPVM::Regex {
       switch ($uchar) {
         case '\\': {
           die "Not yet implemented ^";
+          break;
         }
         case '^': {
           die "Not yet implemented ^";
+          break;
         }
         case '.': {
           die "Not yet implemented .";
+          break;
         }
         case '$': {
           die "Not yet implemented \$";
+          break;
         }
         case '|': {
           die "Not yet implemented |";
+          break;
         }
         case '(': {
           die "Not yet implemented (";
+          break;
         }
         case ')': {
           die "Not yet implemented )";
+          break;
         }
         case '[': {
           die "Not yet implemented [";
+          break;
         }
         case ']': {
           die "Not yet implemented ]";
+          break;
         }
         case '*': {
           die "Not yet implemented *";
+          break;
         }
         case '+': {
           die "Not yet implemented +";
+          break;
         }
         case '?': {
           die "Not yet implemented ?";
+          break;
         }
         case '{': {
           die "Not yet implemented {";
+          break;
         }
         case '}': {
           die "Not yet implemented }";
+          break;
         }
         default: {
           
